--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vicious Cycles</title>
+
+    <style>
+        body {
+            background-color: #E7FBFB;
+        }
+
+        header {
+            font-size: 4em;
+            text-align: center;
+            color: #010B5B;
+        }
+    </style>
 </head>
 <body>
-    <header style = "text-align: center; font-size: 80px;">Vicious Cycles</header>
+    <header style = "text-align: center;">Vicious Cycles</header>
 </body>
 </html>
